Revision history for Perl extension AnyEvent.

ZERO_RETURN - stoptls?
        - added new module AnyEvent::TLS for easier SSL/TLS context
          creation, with many options including hostname verification,
          secure default configuration, lots of documentation and,
          predefined diffie-hellman keys for perfect forward security
          and much more. get it while it's still fresh!
        - use AnyEvent::TLS in AnyEvent::Handle for context management.
	- load AnyEvent::Handle only on demand in AnyEvent::DNS,
          so AnyEvent::Socket users have smaller memory footprint
          in the common case.
        - add AnyEvent::Handle->push_shutdown method.
        - add an additional error message parameter to AnyEvent::Handle's
          on_error callback (for TLS, $! is still available).
        - make AnyEvent::Handle more robust against early conenction
          failures (during new), and return C<undef> in that case
          from the constructor.
        - AnyEvent::Handle will now try to load only JSON::XS first,
          then fall back to JSON.

4.451 Fri Jul  3 00:28:58 CEST 2009
	- do not clear rbuf when shutting down an AnyEvent::Handle
          object - doing so breaks AnyEvent::HTTP.

4.45  Mon Jun 29 22:59:26 CEST 2009
        - a write error could cause AnyEvent::Handle to create
          an I/O watcher with an undefined $fh.
        - special-case mapped ipv4 addresses in both
          AnyEvent::Socket::format_address and parse_address,
          to treat them just like ipv4 addresses.
        - updated and overhauled the AnyEvent::Intro doc.
        - implement AnyEvent::Socket::format_ipv4/ipv6.
	- slightly speed up portable_pipe/socketpair.
        - expand condvar begin/end documentation.

4.42  Fri Jun 26 08:32:18 CEST 2009
	- preliminary and neccesarily incomplete support for IO::Async.
	- reset SIGCHLD to DEFAULT when AnyEvent is loaded, in
          case it was set to IGNORE, to ensure we can catch child statuses